--- a/app/src/main/res/layout/activity_tourism.xml
+++ b/app/src/main/res/layout/activity_tourism.xml
@@ -36,8 +36,8 @@
         android:fontFamily="@font/secular_one"
         android:gravity="center"
         android:padding="10dp"
-        android:text="पर्यटन आणि स्थानिक सेवा स्थळे"
-        android:textColor="@color/colorSecondary"
+        android:text="स्थानिक सेवा स्थळे"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -51,7 +51,7 @@
 
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/tuljapur"
+            android:id="@+id/hospital"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="0"
@@ -79,7 +79,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/pandharpur"
+            android:id="@+id/schoolCollege"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="0"
@@ -107,7 +107,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/akkalkot"
+            android:id="@+id/hotel"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="1"
@@ -135,7 +135,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/ganangapur"
+            android:id="@+id/food"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="1"
@@ -163,13 +163,40 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/barshi"
+            android:id="@+id/toursandtravels"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="2"
             android:layout_column="0"
             android:layout_rowWeight="1"
-            android:layout_columnSpan="2"
+            android:layout_columnWeight="1"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="32dp"
+            app:cardElevation="6dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/gradient_6"
+                android:fontFamily="@font/secular_one"
+                android:gravity="center"
+                android:text="टूर्स आणि\nट्रॅव्हल्स"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/office"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="2"
+            android:layout_rowWeight="1"
+            android:layout_column="1"
             android:layout_columnWeight="1"
             android:layout_margin="10dp"
             android:clickable="true"
