--- a/app/src/main/res/layout/activity_social_media.xml
+++ b/app/src/main/res/layout/activity_social_media.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -52,7 +51,7 @@
         android:foreground="?android:selectableItemBackground"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="15dp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -81,7 +80,7 @@
         android:foreground="?android:selectableItemBackground"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="15dp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -94,6 +93,35 @@
             android:fontFamily="@font/secular_one"
             android:padding="20dp"
             android:text="MH13 आपलं सोलापूर \nInstagram Page"
+            android:textColor="@color/colorSecondaryDark"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/whatsapp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/insta_page"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:clickable="true"
+        android:foreground="?android:selectableItemBackground"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/whatsapp_large" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/secular_one"
+            android:padding="20dp"
+            android:text="MH13 आपलं सोलापूर \nWhatsapp"
             android:textColor="@color/colorSecondaryDark"
             android:textSize="16sp" />
 
