--- a/app/src/main/res/layout/activity_social_media.xml
+++ b/app/src/main/res/layout/activity_social_media.xml
@@ -40,91 +40,112 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:id="@+id/facebook_page"
-        android:layout_width="wrap_content"
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/social_ad"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/top_heading"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:clickable="true"
-        android:foreground="?android:selectableItemBackground"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="15dp">
+        ads:adSize="LARGE_BANNER"
+        ads:adUnitId="@string/social_ad" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/facebook" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/social_ad">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/secular_one"
-            android:padding="20dp"
-            android:text="MH13 आपलं सोलापूर \nFacebook Page"
-            android:textColor="@color/colorSecondaryDark"
-            android:textSize="16sp" />
+            android:gravity="center"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/facebook_page"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:clickable="true"
+                android:foreground="?android:selectableItemBackground"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="15dp">
 
-    <LinearLayout
-        android:id="@+id/insta_page"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/facebook_page"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:clickable="true"
-        android:foreground="?android:selectableItemBackground"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="15dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/facebook" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/instagram" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/secular_one"
+                    android:padding="20dp"
+                    android:text="MH13 आपलं सोलापूर \nFacebook Page"
+                    android:textColor="@color/colorSecondaryDark"
+                    android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/secular_one"
-            android:padding="20dp"
-            android:text="MH13 आपलं सोलापूर \nInstagram Page"
-            android:textColor="@color/colorSecondaryDark"
-            android:textSize="16sp" />
+            </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/insta_page"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/facebook_page"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:clickable="true"
+                android:foreground="?android:selectableItemBackground"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="15dp">
 
-    <LinearLayout
-        android:id="@+id/whatsapp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/insta_page"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:clickable="true"
-        android:foreground="?android:selectableItemBackground"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="15dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/instagram" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/whatsapp_large" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/secular_one"
+                    android:padding="20dp"
+                    android:text="MH13 आपलं सोलापूर \nInstagram Page"
+                    android:textColor="@color/colorSecondaryDark"
+                    android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/secular_one"
-            android:padding="20dp"
-            android:text="MH13 आपलं सोलापूर \nWhatsapp"
-            android:textColor="@color/colorSecondaryDark"
-            android:textSize="16sp" />
+            </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/whatsapp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/insta_page"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:clickable="true"
+                android:foreground="?android:selectableItemBackground"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="15dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/whatsapp_large" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/secular_one"
+                    android:padding="20dp"
+                    android:text="MH13 आपलं सोलापूर \nWhatsapp"
+                    android:textColor="@color/colorSecondaryDark"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
