--- a/app/src/main/res/layout/activity_talent.xml
+++ b/app/src/main/res/layout/activity_talent.xml
@@ -40,10 +40,18 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/talent_ad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/top_heading"
+        ads:adSize="LARGE_BANNER"
+        ads:adUnitId="@string/talent_ad" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/top_heading">
+        android:layout_below="@id/talent_ad">
 
         <RelativeLayout
             android:layout_width="match_parent"
