--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,4 +9,8 @@
         android:id="@+id/feedback"
         android:title="@string/give_us_feedback"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/about"
+        android:title="About"
+        app:showAsAction="never" />
 </menu>
