--- a/app/src/main/res/layout/activity_link.xml
+++ b/app/src/main/res/layout/activity_link.xml
@@ -45,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/top_heading"
-        ads:adSize="BANNER"
+        ads:adSize="LARGE_BANNER"
         ads:adUnitId="@string/link_ad" />
 
     <ScrollView
